--- a/index.html
+++ b/index.html
@@ -7,80 +7,83 @@
       <title>Around The U.S</title>
    </head>
    <body class="page">
-       <div class="page__wrapper page__overlay">
-           <header class="header">
+      <div class="page__wrapper">
+        <div class="modal modal_disabled">
+            <button class="modal__close" type="button"><img src="images/CloseButton.svg" alt ="white x"></button>
+            <h3 class="modal__title">Edit profile</h3>
+            <form class="popup__form" name="edit">
+               <input class="modal__name" type="text" name="name" placeholder="Name">
+               <input class="modal__about-me" type="text" name="about-me" placeholder="About me">
+               <button class="modal__save" type="submit">Save</button>
+            </form>
+         </div>
+         <div class="page__overlay page__overlay_disabled">
+            <header class="header">
                <img class="logo" src="images/logo.svg" alt="Around the U.S Logo">
-           </header>
-           <main class="main">
-            <div class="modal modal_disabled">
-                <button class="modal__close" type="button"><img src="images/CloseButton.svg" alt ="white x"></button>
-                <h3 class="modal__title">Edit profile</h3>
-                <form class="popup__form" name="edit">
-                  <input class="modal__name" type="text" name="name" placeholder="Name" value="Lorem Ipsum">
-                  <input class="modal__about-me" type="text" name="about-me" placeholder="About me" value="Lorem Ipsum">
-                  <button class="modal__save" type="submit">Save</button>
-                </form>
-               </div>
+            </header>
+            <main class="main">
                <section class="profile">
-                <img class="profile__image" src="images/profileimage.jpg" alt="old white man with a red hat">   
-                <div class="profile__info">
-                 <div class="profile__name-container">
-                 <h1 class="profile__name">Jacques Cousteau</h1>
-                 <button class="profile__edit-button"><img src="images/Edit Button.svg" alt="pencil"></button>
-                </div>
-                <p class="profile__about-me">Explorer</p>
-                </div>
-                <button class="profile__add-button"><img src="images/Add Button.svg" alt ="plus sign"></button>
-                <script src="script.js"></script>
+                  <img class="profile__image" src="images/profileimage.jpg" alt="old white man with a red hat">   
+                  <div class="profile__info">
+                     <div class="profile__name-container">
+                        <h1 class="profile__name">Jacques Cousteau</h1>
+                        <button class="profile__edit-button"><img class="profile__edit-image" src="images/Edit Button.svg" alt="pencil"></button>
+                     </div>
+                     <p class="profile__about-me">Explorer</p>
+                  </div>
+                  <button class="profile__add-button"><img src="images/Add Button.svg" alt ="plus sign"></button>
+                  
                </section>
                <article class="elements">
-                   <div class="element">
-                       <img class="element__image" src="images/image-cards/1.jpg" alt="">
-                       <div class="element__title-container">
-                       <h2 class="element__title">Yosemite Valley</h2>
-                       <button class="element__like-button" type="button"><img class="element__like-image" src="images/likebutton.svg" alt="heart"></button>
-                       </div>
-                   </div>
-                   <div class="element">
-                    <img class="element__image" src="images/image-cards/2.jpg" alt="">
-                    <div class="element__title-container">
-                    <h2 class="element__title">Lake Louise</h2>
-                    <button class="element__like-button" type="button"><img class="element__like-image" src="images/likebutton.svg" alt="heart"></button>
-                    </div>
-                </div>
-                <div class="element">
-                    <img class="element__image" src="images/image-cards/3.jpg" alt="">
-                    <div class="element__title-container">
-                    <h2 class="element__title">Bald Mountains</h2>
-                    <button class="element__like-button" type="button"><img class="element__like-image" src="images/likebutton.svg" alt="heart"></button>
-                    </div>
-                </div>
-                <div class="element">
-                    <img class="element__image" src="images/image-cards/4.jpg" alt="">
-                    <div class="element__title-container">
-                    <h2 class="element__title">Latemar</h2>
-                    <button class="element__like-button" type="button"><img class="element__like-image" src="images/likebutton.svg" alt="heart"></button>
-                    </div>
-                </div>
-                <div class="element">
-                    <img class="element__image" src="images/image-cards/5.jpg" alt="">
-                    <div class="element__title-container">
-                    <h2 class="element__title">Vanoise National Park</h2>
-                    <button class="element__like-button" type="button"><img class="element__like-image" src="images/likebutton.svg" alt="heart"></button>
-                    </div>
-                </div>
-                <div class="element">
-                    <img class="element__image" src="images/image-cards/6.jpg" alt="">
-                    <div class="element__title-container">
-                    <h2 class="element__title">Lago di Braies</h2>
-                    <button class="element__like-button" type="button"><img class="element__like-image" src="images/likebutton.svg" alt="heart"></button>
-                    </div>
-                </div>
+                  <div class="element">
+                     <img class="element__image" src="images/image-cards/1.jpg" alt="">
+                     <div class="element__title-container">
+                        <h2 class="element__title">Yosemite Valley</h2>
+                        <button class="element__like-button" type="button"><img class="element__like-image" src="images/likebutton.svg" alt="heart"></button>
+                     </div>
+                  </div>
+                  <div class="element">
+                     <img class="element__image" src="images/image-cards/2.jpg" alt="">
+                     <div class="element__title-container">
+                        <h2 class="element__title">Lake Louise</h2>
+                        <button class="element__like-button" type="button"><img class="element__like-image" src="images/likebutton.svg" alt="heart"></button>
+                     </div>
+                  </div>
+                  <div class="element">
+                     <img class="element__image" src="images/image-cards/3.jpg" alt="">
+                     <div class="element__title-container">
+                        <h2 class="element__title">Bald Mountains</h2>
+                        <button class="element__like-button" type="button"><img class="element__like-image" src="images/likebutton.svg" alt="heart"></button>
+                     </div>
+                  </div>
+                  <div class="element">
+                     <img class="element__image" src="images/image-cards/4.jpg" alt="">
+                     <div class="element__title-container">
+                        <h2 class="element__title">Latemar</h2>
+                        <button class="element__like-button" type="button"><img class="element__like-image" src="images/likebutton.svg" alt="heart"></button>
+                     </div>
+                  </div>
+                  <div class="element">
+                     <img class="element__image" src="images/image-cards/5.jpg" alt="">
+                     <div class="element__title-container">
+                        <h2 class="element__title">Vanoise National Park</h2>
+                        <button class="element__like-button" type="button"><img class="element__like-image" src="images/likebutton.svg" alt="heart"></button>
+                     </div>
+                  </div>
+                  <div class="element">
+                     <img class="element__image" src="images/image-cards/6.jpg" alt="">
+                     <div class="element__title-container">
+                        <h2 class="element__title">Lago di Braies</h2>
+                        <button class="element__like-button" type="button"><img class="element__like-image" src="images/likebutton.svg" alt="heart"></button>
+                     </div>
+                  </div>
                </article>
-           </main>
-           <footer class="footer">
+            </main>
+            <footer class="footer">
                <h2 class="footer__note">&copy 2021 Around The U.S</h2>
-           </footer>
-       </div>
+            </footer>
+         </div>
+      </div>
+      <script src="/scripts/script.js"></script>
    </body>
 </html>
