--- a/index.html
+++ b/index.html
@@ -84,6 +84,6 @@
             </footer>
          </div>
       </div>
-      <script src="/scripts/script.js"></script>
+      <script src="scripts/script.js"></script>
    </body>
 </html>
