--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="modal modal_disabled">
             <button class="modal__close" type="button"><img src="images/CloseButton.svg" alt ="white x"></button>
             <h3 class="modal__title">Edit profile</h3>
-            <form class="popup__form" name="edit">
+            <form class="modal__form" name="edit">
                <input class="modal__name" type="text" name="name" placeholder="Name">
                <input class="modal__about-me" type="text" name="about-me" placeholder="About me">
                <button class="modal__save" type="submit">Save</button>
@@ -36,42 +36,42 @@
                </section>
                <article class="elements">
                   <div class="element">
-                     <img class="element__image" src="images/image-cards/1.jpg" alt="">
+                     <img class="element__image" src="images/image-cards/1.jpg" alt="Yosemite Valley">
                      <div class="element__title-container">
                         <h2 class="element__title">Yosemite Valley</h2>
                         <button class="element__like-button" type="button"><img class="element__like-image" src="images/likebutton.svg" alt="heart"></button>
                      </div>
                   </div>
                   <div class="element">
-                     <img class="element__image" src="images/image-cards/2.jpg" alt="">
+                     <img class="element__image" src="images/image-cards/2.jpg" alt="Lake Louise">
                      <div class="element__title-container">
                         <h2 class="element__title">Lake Louise</h2>
                         <button class="element__like-button" type="button"><img class="element__like-image" src="images/likebutton.svg" alt="heart"></button>
                      </div>
                   </div>
                   <div class="element">
-                     <img class="element__image" src="images/image-cards/3.jpg" alt="">
+                     <img class="element__image" src="images/image-cards/3.jpg" alt="Bald Mountains">
                      <div class="element__title-container">
                         <h2 class="element__title">Bald Mountains</h2>
                         <button class="element__like-button" type="button"><img class="element__like-image" src="images/likebutton.svg" alt="heart"></button>
                      </div>
                   </div>
                   <div class="element">
-                     <img class="element__image" src="images/image-cards/4.jpg" alt="">
+                     <img class="element__image" src="images/image-cards/4.jpg" alt="Latemar">
                      <div class="element__title-container">
                         <h2 class="element__title">Latemar</h2>
                         <button class="element__like-button" type="button"><img class="element__like-image" src="images/likebutton.svg" alt="heart"></button>
                      </div>
                   </div>
                   <div class="element">
-                     <img class="element__image" src="images/image-cards/5.jpg" alt="">
+                     <img class="element__image" src="images/image-cards/5.jpg" alt="Vanoise National Park">
                      <div class="element__title-container">
                         <h2 class="element__title">Vanoise National Park</h2>
                         <button class="element__like-button" type="button"><img class="element__like-image" src="images/likebutton.svg" alt="heart"></button>
                      </div>
                   </div>
                   <div class="element">
-                     <img class="element__image" src="images/image-cards/6.jpg" alt="">
+                     <img class="element__image" src="images/image-cards/6.jpg" alt="Lago di Braies">
                      <div class="element__title-container">
                         <h2 class="element__title">Lago di Braies</h2>
                         <button class="element__like-button" type="button"><img class="element__like-image" src="images/likebutton.svg" alt="heart"></button>
