--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
    </head>
    <body class="page">
       <div class="page__wrapper">
-        <div class="modal modal_disabled">
-            <button class="modal__close" type="button"><img src="images/CloseButton.svg" alt ="white x"></button>
+         <div class="modal modal_disabled">
+            <button class="modal__close" type="button"><img src="images/close-button.svg" alt ="white x"></button>
             <h3 class="modal__title">Edit profile</h3>
             <form class="modal__form" name="edit">
                <input class="modal__name" type="text" name="name" placeholder="Name">
@@ -27,12 +27,11 @@
                   <div class="profile__info">
                      <div class="profile__name-container">
                         <h1 class="profile__name">Jacques Cousteau</h1>
-                        <button class="profile__edit-button"><img class="profile__edit-image" src="images/Edit Button.svg" alt="pencil"></button>
+                        <button class="profile__edit-button" type="button"><img class="profile__edit-image" src="images/edit-button.svg" alt="pencil"></button>
                      </div>
                      <p class="profile__about-me">Explorer</p>
                   </div>
-                  <button class="profile__add-button"><img src="images/Add Button.svg" alt ="plus sign"></button>
-                  
+                  <button class="profile__add-button" type="button"><img src="images/add-button.svg" alt ="plus sign"></button>
                </section>
                <article class="elements">
                   <div class="element">
@@ -80,7 +79,7 @@
                </article>
             </main>
             <footer class="footer">
-               <h2 class="footer__note">&copy 2021 Around The U.S</h2>
+               <h2 class="footer__note">&copy; 2021 Around The U.S</h2>
             </footer>
          </div>
       </div>
