--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </header>
             <main class="main">
                <section class="profile">
-                  <img class="profile__image" src="images/profileimage.jpg" alt="old white man with a red hat">   
+                  <img class="profile__image" src="images/profile-image.jpg" alt="old white man with a red hat">   
                   <div class="profile__info">
                      <div class="profile__name-container">
                         <h1 class="profile__name">Jacques Cousteau</h1>
@@ -38,42 +38,42 @@
                      <img class="element__image" src="images/image-cards/1.jpg" alt="Yosemite Valley">
                      <div class="element__title-container">
                         <h2 class="element__title">Yosemite Valley</h2>
-                        <button class="element__like-button" type="button"><img class="element__like-image" src="images/likebutton.svg" alt="heart"></button>
+                        <button class="element__like-button" type="button"><img class="element__like-image" src="images/like-button.svg" alt="heart"></button>
                      </div>
                   </div>
                   <div class="element">
                      <img class="element__image" src="images/image-cards/2.jpg" alt="Lake Louise">
                      <div class="element__title-container">
                         <h2 class="element__title">Lake Louise</h2>
-                        <button class="element__like-button" type="button"><img class="element__like-image" src="images/likebutton.svg" alt="heart"></button>
+                        <button class="element__like-button" type="button"><img class="element__like-image" src="images/like-button.svg" alt="heart"></button>
                      </div>
                   </div>
                   <div class="element">
                      <img class="element__image" src="images/image-cards/3.jpg" alt="Bald Mountains">
                      <div class="element__title-container">
                         <h2 class="element__title">Bald Mountains</h2>
-                        <button class="element__like-button" type="button"><img class="element__like-image" src="images/likebutton.svg" alt="heart"></button>
+                        <button class="element__like-button" type="button"><img class="element__like-image" src="images/like-button.svg" alt="heart"></button>
                      </div>
                   </div>
                   <div class="element">
                      <img class="element__image" src="images/image-cards/4.jpg" alt="Latemar">
                      <div class="element__title-container">
                         <h2 class="element__title">Latemar</h2>
-                        <button class="element__like-button" type="button"><img class="element__like-image" src="images/likebutton.svg" alt="heart"></button>
+                        <button class="element__like-button" type="button"><img class="element__like-image" src="images/like-button.svg" alt="heart"></button>
                      </div>
                   </div>
                   <div class="element">
                      <img class="element__image" src="images/image-cards/5.jpg" alt="Vanoise National Park">
                      <div class="element__title-container">
                         <h2 class="element__title">Vanoise National Park</h2>
-                        <button class="element__like-button" type="button"><img class="element__like-image" src="images/likebutton.svg" alt="heart"></button>
+                        <button class="element__like-button" type="button"><img class="element__like-image" src="images/like-button.svg" alt="heart"></button>
                      </div>
                   </div>
                   <div class="element">
                      <img class="element__image" src="images/image-cards/6.jpg" alt="Lago di Braies">
                      <div class="element__title-container">
                         <h2 class="element__title">Lago di Braies</h2>
-                        <button class="element__like-button" type="button"><img class="element__like-image" src="images/likebutton.svg" alt="heart"></button>
+                        <button class="element__like-button" type="button"><img class="element__like-image" src="images/like-button.svg" alt="heart"></button>
                      </div>
                   </div>
                </article>
