--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                <input class="modal__about-me" type="text" name="about-me" placeholder="About me">
                <button class="modal__save" type="submit">Save</button>
             </form>
+            <p class="modal__error modal__error_disabled">Characters limit exceeded</p>
          </div>
          <div class="page__overlay page__overlay_disabled">
             <header class="header">
