--- a/index.html
+++ b/index.html
@@ -8,16 +8,18 @@
    </head>
    <body class="page">
       <div class="page__wrapper">
-         <div class="modal modal_disabled">
-            <button class="modal__close" type="button"><img src="images/close-button.svg" alt ="white x"></button>
-            <h3 class="modal__title">Edit profile</h3>
-            <form class="modal__form" name="edit">
-               <input class="modal__name" type="text" name="name" placeholder="Name">
-               <input class="modal__about-me" type="text" name="about-me" placeholder="About me">
-               <button class="modal__save" type="submit">Save</button>
-            </form>
-            <p class="modal__error modal__error_disabled">Characters limit exceeded</p>
-         </div>
+         <template id="modal">
+            <div class="modal modal_disabled">
+               <button class="modal__close" type="button"><img src="images/close-button.svg" alt ="white x"></button>
+               <h3 class="modal__title">Edit profile</h3>
+               <form class="modal__form" name="edit">
+                  <input class="modal__name" type="text" name="name" placeholder="Name" value="">
+                  <input class="modal__about-me" type="text" name="about-me" placeholder="About me">
+                  <button class="modal__save" type="submit">Save</button>
+               </form>
+               <p class="modal__error modal__error_disabled">Characters limit exceeded</p>
+            </div>
+         </template>
          <div class="page__overlay page__overlay_disabled">
             <header class="header">
                <img class="logo" src="images/logo.svg" alt="Around the U.S Logo">
@@ -35,48 +37,16 @@
                   <button class="profile__add-button" type="button"><img src="images/add-button.svg" alt ="plus sign"></button>
                </section>
                <article class="elements">
-                  <div class="element">
-                     <img class="element__image" src="images/image-cards/1.jpg" alt="Yosemite Valley">
-                     <div class="element__title-container">
-                        <h2 class="element__title">Yosemite Valley</h2>
-                        <button class="element__like-button" type="button"><img class="element__like-image" src="images/like-button.svg" alt="heart"></button>
+                  <template id="element">
+                     <div class="element">
+                        <button class="element__delete-button" type="button"></button>
+                        <button class="element__image-button" type="button"><img class="element__image" src="" alt=""></button>
+                        <div class="element__title-container">
+                           <h2 class="element__title"></h2>
+                           <button class="element__like-button" type="button"></button>
+                        </div>
                      </div>
-                  </div>
-                  <div class="element">
-                     <img class="element__image" src="images/image-cards/2.jpg" alt="Lake Louise">
-                     <div class="element__title-container">
-                        <h2 class="element__title">Lake Louise</h2>
-                        <button class="element__like-button" type="button"><img class="element__like-image" src="images/like-button.svg" alt="heart"></button>
-                     </div>
-                  </div>
-                  <div class="element">
-                     <img class="element__image" src="images/image-cards/3.jpg" alt="Bald Mountains">
-                     <div class="element__title-container">
-                        <h2 class="element__title">Bald Mountains</h2>
-                        <button class="element__like-button" type="button"><img class="element__like-image" src="images/like-button.svg" alt="heart"></button>
-                     </div>
-                  </div>
-                  <div class="element">
-                     <img class="element__image" src="images/image-cards/4.jpg" alt="Latemar">
-                     <div class="element__title-container">
-                        <h2 class="element__title">Latemar</h2>
-                        <button class="element__like-button" type="button"><img class="element__like-image" src="images/like-button.svg" alt="heart"></button>
-                     </div>
-                  </div>
-                  <div class="element">
-                     <img class="element__image" src="images/image-cards/5.jpg" alt="Vanoise National Park">
-                     <div class="element__title-container">
-                        <h2 class="element__title">Vanoise National Park</h2>
-                        <button class="element__like-button" type="button"><img class="element__like-image" src="images/like-button.svg" alt="heart"></button>
-                     </div>
-                  </div>
-                  <div class="element">
-                     <img class="element__image" src="images/image-cards/6.jpg" alt="Lago di Braies">
-                     <div class="element__title-container">
-                        <h2 class="element__title">Lago di Braies</h2>
-                        <button class="element__like-button" type="button"><img class="element__like-image" src="images/like-button.svg" alt="heart"></button>
-                     </div>
-                  </div>
+                  </template>
                </article>
             </main>
             <footer class="footer">
