--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
                <p class="modal__error modal__error_disabled">Characters limit exceeded</p>
             </div>
          </template>
+         <template id="image-popup">
+            <div class="image-popup image-popup_disabled">
+             <button class="image-popup__close" type="button"><img src="images/close-button.svg" alt ="white x"></button>
+             <img class="image-popup__image" src="https://code.s3.yandex.net/web-code/lake-louise.jpg"> 
+             <p class="image-popup__footer">The Grand Canyon</p>
+            </div>
+          </template>
          <div class="page__overlay page__overlay_disabled">
             <header class="header">
                <img class="logo" src="images/logo.svg" alt="Around the U.S Logo">
