--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                   <template id="element">
                      <div class="element">
                         <button class="element__delete-button" type="button"></button>
-                        <button class="element__image-button" type="button"><img class="element__image" src="" alt=""></button>
+                        <button class="element__image-button" type="button"><img class="element__image"></button>
                         <div class="element__title-container">
                            <h2 class="element__title"></h2>
                            <button class="element__like-button" type="button"></button>
