--- a/index.html
+++ b/index.html
@@ -1,66 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
-      <meta charset="UTF-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <link rel="stylesheet" href="pages/index.css" />
-      <title>Around The U.S</title>
-   </head>
-   <body class="page">
-      <div class="page__wrapper">
-         <template id="modal">
-            <div class="modal modal_disabled">
-               <button class="modal__close" type="button"><img src="images/close-button.svg" alt ="white x"></button>
-               <h3 class="modal__title">Edit profile</h3>
-               <form class="modal__form" name="edit">
-                  <input class="modal__name" type="text" name="name" placeholder="Name" value="">
-                  <input class="modal__about-me" type="text" name="about-me" placeholder="About me">
-                  <button class="modal__save" type="submit">Save</button>
-               </form>
-               <p class="modal__error modal__error_disabled">Characters limit exceeded</p>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="pages/index.css" />
+        <title>Around The U.S</title>
+    </head>
+    <body class="page">
+        <div class="page__wrapper">
+            <div class="modal modal_type_edit-card modal_disabled">
+                <button class="modal__close" type="button"><img src="images/close-button.svg" alt="white x" /></button>
+                <h3 class="modal__title">Edit profile</h3>
+                <form class="modal__form" name="edit">
+                    <input class="modal__name" type="text" name="name" placeholder="Name" maxLength="22" required />
+                    <input class="modal__about-me" type="text" name="about-me" placeholder="About me" maxLength="50" required />
+                    <button class="modal__save" type="submit" name="save">Save</button>
+                </form>
             </div>
-         </template>
-         <template id="image-popup">
-            <div class="image-popup image-popup_disabled">
-             <button class="image-popup__close" type="button"><img src="images/close-button.svg" alt ="white x"></button>
-             <img class="image-popup__image" src="https://code.s3.yandex.net/web-code/lake-louise.jpg"> 
-             <p class="image-popup__footer">The Grand Canyon</p>
+            <div class="modal modal_type_add-card modal_disabled">
+                <button class="modal__close" type="button"><img src="images/close-button.svg" alt="white x" /></button>
+                <h3 class="modal__title">New Place</h3>
+                <form class="modal__form" name="edit">
+                    <input class="modal__name" type="text" name="title" placeholder="Title" required />
+                    <input class="modal__about-me" type="text" name="image-link" placeholder="Image link" required />
+                    <button class="modal__save" type="submit" name="create">Create</button>
+                </form>
             </div>
-          </template>
-         <div class="page__overlay page__overlay_disabled">
-            <header class="header">
-               <img class="logo" src="images/logo.svg" alt="Around the U.S Logo">
-            </header>
-            <main class="main">
-               <section class="profile">
-                  <img class="profile__image" src="images/profile-image.jpg" alt="old white man with a red hat">   
-                  <div class="profile__info">
-                     <div class="profile__name-container">
-                        <h1 class="profile__name">Jacques Cousteau</h1>
-                        <button class="profile__edit-button" type="button"><img class="profile__edit-image" src="images/edit-button.svg" alt="pencil"></button>
-                     </div>
-                     <p class="profile__about-me">Explorer</p>
-                  </div>
-                  <button class="profile__add-button" type="button"><img src="images/add-button.svg" alt ="plus sign"></button>
-               </section>
-               <article class="elements">
-                  <template id="element">
-                     <div class="element">
-                        <button class="element__delete-button" type="button"></button>
-                        <button class="element__image-button" type="button"><img class="element__image"></button>
-                        <div class="element__title-container">
-                           <h2 class="element__title"></h2>
-                           <button class="element__like-button" type="button"></button>
+            <div class="image-popup modal_disabled">
+                <button class="image-popup__close" type="button"><img src="images/close-button.svg" alt="white x" /></button>
+                <img class="image-popup__image" src="https://code.s3.yandex.net/web-code/lake-louise.jpg" />
+                <p class="image-popup__footer">The Grand Canyon</p>
+            </div>
+            <div class="page__overlay page__overlay_disabled">
+                <header class="header">
+                    <img class="logo" src="images/logo.svg" alt="Around the U.S Logo" />
+                </header>
+                <main class="main">
+                    <section class="profile">
+                        <img class="profile__image" src="images/profile-image.jpg" alt="old white man with a red hat" />
+                        <div class="profile__info">
+                            <div class="profile__name-container">
+                                <h1 class="profile__name">Jacques Cousteau</h1>
+                                <button class="profile__edit-button" type="button"><img class="profile__edit-image" src="images/edit-button.svg" alt="pencil" /></button>
+                            </div>
+                            <p class="profile__about-me">Explorer</p>
                         </div>
-                     </div>
-                  </template>
-               </article>
-            </main>
-            <footer class="footer">
-               <h2 class="footer__note">&copy; 2021 Around The U.S</h2>
-            </footer>
-         </div>
-      </div>
-      <script src="scripts/script.js"></script>
-   </body>
+                        <button class="profile__add-button" type="button"><img src="images/add-button.svg" alt="plus sign" /></button>
+                    </section>
+                    <article class="elements">
+                        <template id="element">
+                            <div class="element">
+                                <button class="element__delete-button" type="button"></button>
+                                <button class="element__image-button" type="button"><img class="element__image" /></button>
+                                <div class="element__title-container">
+                                    <h2 class="element__title"></h2>
+                                    <button class="element__like-button" type="button"></button>
+                                </div>
+                            </div>
+                        </template>
+                    </article>
+                </main>
+                <footer class="footer">
+                    <h2 class="footer__note">&copy; 2021 Around The U.S</h2>
+                </footer>
+            </div>
+        </div>
+        <script src="scripts/script.js"></script>
+    </body>
 </html>
