--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
                 <button class="modal__close" type="button"><img src="images/close-button.svg" alt="white x" /></button>
                 <h3 class="modal__title">Edit profile</h3>
                 <form class="modal__form" name="edit">
-                    <input class="modal__name" type="text" name="name" placeholder="Name" maxLength="22" required />
-                    <input class="modal__about-me" type="text" name="about-me" placeholder="About me" maxLength="50" required />
+                    <input class="modal__name" type="text" name="name" placeholder="Name" maxlength="22" required />
+                    <input class="modal__about-me" type="text" name="about-me" placeholder="About me" maxlength="50" required />
                     <button class="modal__save" type="submit" name="save">Save</button>
                 </form>
             </div>
