--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                     <button class="modal__save" type="submit" name="create">Create</button>
                 </form>
             </div>
-            <div class="image-popup modal_disabled">
-                <button class="image-popup__close" type="button"><img src="images/close-button.svg" alt="white x" /></button>
-                <img class="image-popup__image" src="https://code.s3.yandex.net/web-code/lake-louise.jpg" />
-                <p class="image-popup__footer">The Grand Canyon</p>
+            <div class="modal modal_type_image-card modal_disabled">
+                <button class="modal__image-close" type="button"><img src="images/close-button.svg" alt="white x" /></button>
+                <img class="modal__image" src="https://code.s3.yandex.net/web-code/lake-louise.jpg" alt="lake louise"/>
+                <p class="modal__footer">The Grand Canyon</p>
             </div>
             <div class="page__overlay page__overlay_disabled">
                 <header class="header">
