--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <span id="name" class="modal__error">Please fill out this field.</span>
                     <input id="url" class="modal__about-me modal__input" type="url" name="image-link" placeholder="Image link" required />
                     <span id="url" class="modal__error">Please fill out this field.</span>
-                    <button class="modal__save" type="submit" name="create">Create</button>
+                    <button class="modal__save modal__save_disabled" type="submit" name="create">Create</button>
                 </form>
             </div>
             <div class="modal modal_type_image-card modal_disabled">
