--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
                 <h3 class="modal__title">Edit profile</h3>
                 <form class="modal__form" name="edit">
                     <input id="title" class="modal__name modal__input" type="text" name="title" placeholder="Name" maxlength="22" required />
-                    <span id="title" class="modal__error">Please fill out this field.</span>
+                    <span id="title-error" class="modal__error">Please fill out this field.</span>
                     <input id="about" class="modal__about-me modal__input" type="text" name="about" placeholder="About me" maxlength="50" required />
-                    <span id="about" class="modal__error">Please fill out this field.</span>
+                    <span id="about-error" class="modal__error">Please fill out this field.</span>
                     <button class="modal__save" type="submit" name="save">Save</button>
                 </form>
             </div>
@@ -24,9 +24,9 @@
                 <h3 class="modal__title">New Place</h3>
                 <form class="modal__form" name="add">
                     <input id="name" class="modal__name modal__input" type="text" name="title" placeholder="Title" required />
-                    <span id="name" class="modal__error">Please fill out this field.</span>
+                    <span id="name-error" class="modal__error">Please fill out this field.</span>
                     <input id="url" class="modal__about-me modal__input" type="url" name="image-link" placeholder="Image link" required />
-                    <span id="url" class="modal__error">Please fill out this field.</span>
+                    <span id="url-error" class="modal__error">Please fill out this field.</span>
                     <button class="modal__save modal__save_disabled" type="submit" name="create">Create</button>
                 </form>
             </div>
