--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
                     <span id="name-error" class="modal__error">Please fill out this field.</span>
                     <input id="url" class="modal__about-me modal__input" type="url" name="image-link" placeholder="Image link" required />
                     <span id="url-error" class="modal__error">Please fill out this field.</span>
-                    <button class="modal__save modal__save_disabled" type="submit" name="create">Create</button>
+                    <button class="modal__save" type="submit" name="create">Create</button>
                 </form>
             </div>
             <div class="modal modal_type_image-card modal_disabled">
-                <button class="modal__image-close" type="button"><img src="images/close-button.svg" alt="white x" /></button>
+                <button class="modal__close" type="button"><img src="images/close-button.svg" alt="white x" /></button>
                 <img class="modal__image" src="https://code.s3.yandex.net/web-code/lake-louise.jpg" alt="lake louise"/>
                 <p class="modal__footer">The Grand Canyon</p>
             </div>
