--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body class="page">
         <div class="page__wrapper">
-            <div class="modal modal_type_edit-card modal_disabled">
+            <div class="modal modal_type_edit-card">
                 <button class="modal__close" type="button"><img src="images/close-button.svg" alt="white x" /></button>
                 <h3 class="modal__title">Edit profile</h3>
                 <form class="modal__form" name="edit">
@@ -19,7 +19,7 @@
                     <button class="modal__save" type="submit" name="save">Save</button>
                 </form>
             </div>
-            <div class="modal modal_type_add-card modal_disabled">
+            <div class="modal modal_type_add-card">
                 <button class="modal__close" type="button"><img src="images/close-button.svg" alt="white x" /></button>
                 <h3 class="modal__title">New Place</h3>
                 <form class="modal__form" name="add">
@@ -30,7 +30,7 @@
                     <button class="modal__save" type="submit" name="create">Create</button>
                 </form>
             </div>
-            <div class="modal modal_type_image-card modal_disabled">
+            <div class="modal modal_type_image-card">
                 <button class="modal__close" type="button"><img src="images/close-button.svg" alt="white x" /></button>
                 <img class="modal__image" src="https://code.s3.yandex.net/web-code/lake-louise.jpg" alt="lake louise"/>
                 <p class="modal__footer">The Grand Canyon</p>
