--- a/index.html
+++ b/index.html
@@ -69,7 +69,6 @@
                 </footer>
             </div>
         </div>
-        <script src="scripts/validate.js" defer></script>
-        <script src="scripts/script.js" defer></script>
+        <script type='module' src="scripts/script.js" defer></script>
     </body>
 </html>
