--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,12 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="pages/index.css" />
         <title>Around The U.S</title>
     </head>
     <body class="page">
         <div class="page__wrapper">
             <div class="modal modal_type_edit-card">
-                <button class="modal__close" type="button"><img src="images/close-button.svg" alt="white x" /></button>
+                <button class="modal__close" type="button"><img src="<%= require('./images/close-button.svg')%>" alt="white x" /></button>
                 <h3 class="modal__title">Edit profile</h3>
                 <form class="modal__form" name="edit">
                     <input id="title" class="modal__name modal__input" type="text" name="title" placeholder="Name" maxlength="22" required />
@@ -20,7 +19,7 @@
                 </form>
             </div>
             <div class="modal modal_type_add-card">
-                <button class="modal__close" type="button"><img src="images/close-button.svg" alt="white x" /></button>
+                <button class="modal__close" type="button"><img src="<%= require('./images/close-button.svg')%>" alt="white x" /></button>
                 <h3 class="modal__title">New Place</h3>
                 <form class="modal__form" name="add">
                     <input id="name" class="modal__name modal__input" type="text" name="title" placeholder="Title" required />
@@ -31,25 +30,25 @@
                 </form>
             </div>
             <div class="modal modal_type_image-card">
-                <button class="modal__close" type="button"><img src="images/close-button.svg" alt="white x" /></button>
+                <button class="modal__close" type="button"><img src="<%= require('./images/close-button.svg')%>" alt="white x" /></button>
                 <img class="modal__image" src="https://code.s3.yandex.net/web-code/lake-louise.jpg" alt="lake louise"/>
                 <p class="modal__footer">The Grand Canyon</p>
             </div>
             <div class="page__overlay page__overlay_disabled">
                 <header class="header">
-                    <img class="logo" src="images/logo.svg" alt="Around the U.S Logo" />
+                    <img class="logo" src="<%= require('./images/logo.svg')%>" alt="Around the U.S Logo" />
                 </header>
                 <main class="main">
                     <section class="profile">
-                        <img class="profile__image" src="images/profile-image.jpg" alt="old white man with a red hat" />
+                        <img class="profile__image" src="<%= require('./images/profile-image.jpg')%>" alt="old white man with a red hat" />
                         <div class="profile__info">
                             <div class="profile__name-container">
                                 <h1 class="profile__name">Jacques Cousteau</h1>
-                                <button class="profile__edit-button" type="button"><img class="profile__edit-image" src="images/edit-button.svg" alt="pencil" /></button>
+                                <button class="profile__edit-button" type="button"><img class="profile__edit-image" src="<%= require('./images/edit-button.svg')%>" alt="pencil" /></button>
                             </div>
                             <p class="profile__about-me">Explorer</p>
                         </div>
-                        <button class="profile__add-button" type="button"><img src="images/add-button.svg" alt="plus sign" /></button>
+                        <button class="profile__add-button" type="button"><img src="<%= require('./images/add-button.svg')%>" alt="plus sign" /></button>
                     </section>
                     <article class="elements">
                         <template id="element">
@@ -69,6 +68,5 @@
                 </footer>
             </div>
         </div>
-        <script type='module' src="scripts/script.js" defer></script>
     </body>
 </html>
